Session 15: Java cleanup